implemented toolbar with spinner view for get movies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="vote">Vote: </string>
     <string name="release_date">Release Date: </string>
     <string name="synopsis">Synopsis: </string>
+
+    <string-array name="movie_sort_options">
+        <item>Most Popular</item>
+        <item>Highest Rated</item>
+    </string-array>
 </resources>
