done implementing fetching of individual movie review, also done more refactoring for reusing MovieRequestAsyncThread

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="network_error_msg">Check network connection...</string>
     <string name="btn_retry_text">Retry</string>
     <string name="img_desc">Movie Image</string>
+    <string name="load_review">Load reviews</string>
 
 
     <string-array name="movie_sort_options">
