implemented Favorite Movie display and hide favorite button on DetailActivity if movie is already marked as favorite

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string-array name="movie_sort_options">
         <item>Most Popular</item>
         <item>Highest Rated</item>
+        <item>My Favorite</item>
     </string-array>
 </resources>
