done with movie trailer loading logic with some refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
         <item>Highest Rated</item>
         <item>My Favorite</item>
     </string-array>
+    <string name="title_activity_trailer">TrailerActivity</string>
 </resources>
