--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="vote">Vote: </string>
     <string name="release_date">Release Date: </string>
     <string name="synopsis">Synopsis: </string>
-    <string name="network_error_msg">Check network connection...</string>
+    <string name="network_error_msg">Check network connection character(..., &#8230;)</string>
     <string name="btn_retry_text">Retry</string>
     <string name="img_desc">Movie Image</string>
     <string name="load_review">Load reviews</string>
